# cdf

./: .gitignore  .neoconf.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  QUALITY.md  README.md  VISION.md  cdf.json  deny.toml  firn-the-book-of-the-system.md  flags.json  pyproject.toml  pytest.ini
crates/cdf-aws/: Cargo.toml
crates/cdf-aws/src/: lib.rs
crates/cdf-bench-core/: Cargo.toml
crates/cdf-bench-core/src/: cdf_command.rs  host.rs  lib.rs  macro_runner.rs
crates/cdf-bench-measure/: Cargo.toml
crates/cdf-bench-measure/src/: main.rs  statistics.rs  validation.rs
crates/cdf-benchmarks/: Cargo.toml  README.md
crates/cdf-benchmarks/benches/: baseline.rs
crates/cdf-benchmarks/fixtures/: baseline-fixtures.json  first-party-destination-catalog.json  p3-datasets.json  p3-envelope-spec.json  p3-report-fixture.json
crates/cdf-benchmarks/scripts/: record-trend.sh
crates/cdf-benchmarks/src/: baseline.rs  catalog.rs  cdf_command.rs  comparison.rs  duckdb_profile.rs  envelope.rs  fixtures.rs  host.rs  interop.rs  lab.rs  lib.rs  macro_runner.rs  matrix.rs  package_shape.rs  profiling.rs  references.rs  resource.rs  runners.rs  validation.rs
crates/cdf-benchmarks/tests/: fixtures.rs  lab_policy.rs  lab_runners.rs
crates/cdf-cli/: Cargo.toml
crates/cdf-cli-core/: Cargo.toml
crates/cdf-cli-core/src/: args.rs  cli_artifacts.rs  error_catalog.rs  lib.rs  output.rs  progress.rs  suggestions.rs  terminal.rs
crates/cdf-cli/src/: add_command.rs  args.rs  backfill_command.rs  cli_artifacts.rs  commands.rs  context.rs  contract_command.rs  destination_registry.rs  destination_registry_test_support.rs  destination_uri.rs  doctor_command.rs  doctor_drift.rs  error_catalog.rs  http_transport.rs  inspect_command.rs  inspect_run_command.rs  lib.rs  main.rs  output.rs  package_command.rs  progress.rs  project_command.rs  project_run_resource.rs  replay_command.rs  reports.rs  resume_command.rs  run_command.rs  runtime_budget.rs  scan_command.rs  schema_command.rs  source_registry.rs  sql_command.rs  state_command.rs  status_command.rs  status_freshness.rs  suggestions.rs  system_sql.rs  terminal.rs  tests.rs
crates/cdf-cli/tests/: doctor_env.rs
crates/cdf-conformance/: Cargo.toml
crates/cdf-conformance/src/: destination_catalog.rs  lib.rs  mvp_acceptance_demo.rs  scope_lease.rs  source_fixture.rs
crates/cdf-contract/: Cargo.toml
crates/cdf-contract/src/: aggregation.rs  compiler.rs  correction.rs  dedup_key.rs  evaluator.rs  expression.rs  fingerprint.rs  lattice.rs  lib.rs  normalization.rs  policy.rs  program.rs  reconciliation.rs  residual.rs  schema.rs  tests.rs  vector.rs
crates/cdf-declarative/: Cargo.toml
crates/cdf-declarative/src/: compiled.rs  declarations.rs  file_compat.rs  file_runtime.rs  file_transport.rs  lib.rs  rest_compat.rs  rest_runtime.rs  sql_runtime.rs  tests.rs
crates/cdf-dest-duckdb/: Cargo.toml
crates/cdf-dest-duckdb/src/: api.rs  arrow_bridge.rs  commit.rs  corrections.rs  ingest_envelope.rs  lib.rs  mirrors.rs  nanoarrow.rs  package.rs  planning.rs  profiling.rs  raw.rs  receipts.rs  rows.rs  runtime.rs  segment_scan.rs  sheet.rs  sql.rs  stream_scan.rs  table.rs  tests.rs
crates/cdf-dest-parquet/: Cargo.toml
crates/cdf-dest-parquet/src/: api.rs  corrections.rs  duckdb_writer.rs  layout.rs  lib.rs  manifest.rs  package.rs  receipts.rs  runtime.rs  sheet.rs  staging.rs  store.rs  tests.rs
crates/cdf-dest-postgres/: Cargo.toml
crates/cdf-dest-postgres/src/: api.rs  binary_copy.rs  catalog.rs  commit.rs  correction.rs  ddl.rs  dml.rs  identifiers.rs  lib.rs  live_tests.rs  mirrors.rs  package.rs  plan.rs  rows.rs  runtime.rs  sheet.rs  source.rs  tests.rs  validate.rs
crates/cdf-engine/: Cargo.toml
crates/cdf-engine/src/: dedup_spill.rs  execution.rs  expression.rs  graph_plan.rs  late_data.rs  lib.rs  memory.rs  output_schema.rs  planning.rs  predicates.rs  residual_spill.rs  segmentation.rs  standalone_host.rs  statistics_pruning.rs  table_provider.rs  tests.rs  types.rs  variant_capture.rs  worker_task.rs
crates/cdf-expression/: Cargo.toml
crates/cdf-expression/src/: lib.rs
crates/cdf-foreign-stream/: Cargo.toml
crates/cdf-foreign-stream/src/: lib.rs
crates/cdf-format-arrow-ipc/: Cargo.toml
crates/cdf-format-arrow-ipc/src/: lib.rs  stream_driver.rs  tests.rs
crates/cdf-format-avro/: Cargo.toml
crates/cdf-format-avro/src/: lib.rs  tests.rs
crates/cdf-format-delimited/: Cargo.toml
crates/cdf-format-delimited/src/: fixed_width.rs  lib.rs
crates/cdf-format-json/: Cargo.toml
crates/cdf-format-json/src/: lib.rs
crates/cdf-format-parquet/: Cargo.toml
crates/cdf-format-parquet/src/: lib.rs  tests.rs
crates/cdf-format-protobuf/: Cargo.toml
crates/cdf-format-protobuf/src/: lib.rs  schema.rs  tests.rs  wire.rs
crates/cdf-formats/: Cargo.toml
crates/cdf-formats/src/: arrow_ipc_discovery.rs  lib.rs  parquet_discovery.rs  readers.rs  resource.rs  schema.rs  tests.rs  types.rs
crates/cdf-kernel/: Cargo.toml
crates/cdf-kernel/src/: arrow_type.rs  batch.rs  canonical_arrow.rs  checkpoint.rs  config.rs  content_reachability.rs  contract.rs  correction.rs  destination.rs  error.rs  execution_extent.rs  expression.rs  ids.rs  lease.rs  lib.rs  metadata.rs  position.rs  position_aggregation.rs  resource.rs  retention.rs  run_event.rs  schema_fingerprint.rs  scope.rs  statistics.rs  stratified_selection.rs  tests.rs
crates/cdf-memory/: Cargo.toml
crates/cdf-memory/src/: lib.rs  spill.rs  tests.rs
crates/cdf-object-access/: Cargo.toml
crates/cdf-object-access/src/: evicting_spool_byte_source.rs  growing_spool_byte_source.rs  lib.rs  local_byte_source.rs  object_store_byte_source.rs  payload_cache.rs  test_support.rs  transport.rs
crates/cdf-package/: Cargo.toml
crates/cdf-package-contract/: Cargo.toml
crates/cdf-package-contract/src/: access.rs  artifacts.rs  late_data.rs  lib.rs  model.rs  provenance.rs  quarantine.rs
crates/cdf-package-contract/tests/: build_graph.rs
crates/cdf-package/src/: archive.rs  artifacts.rs  builder.rs  (+13 more)
crates/cdf-postgres/: Cargo.toml
(+2919 files in other folders)
