[workspace]
members = [
    "crates/cdf-kernel",
    "crates/cdf-engine",
    "crates/cdf-contract",
    "crates/cdf-package",
    "crates/cdf-runtime",
    "crates/cdf-memory",
    "crates/cdf-state-sqlite",
    "crates/cdf-http",
    "crates/cdf-formats",
    "crates/cdf-format-parquet",
    "crates/cdf-format-arrow-ipc",
    "crates/cdf-transform-gzip",
    "crates/cdf-transform-lz4",
    "crates/cdf-transform-zstd",
    "crates/cdf-transform-snappy",
    "crates/cdf-postgres",
    "crates/cdf-source-postgres",
    "crates/cdf-source-rest",
    "crates/cdf-source-files",
    "crates/cdf-declarative",
    "crates/cdf-python",
    "crates/cdf-wasm",
    "crates/cdf-subprocess",
    "crates/cdf-dest-duckdb",
    "crates/cdf-dest-parquet",
    "crates/cdf-dest-postgres",
    "crates/cdf-project",
    "crates/cdf-cli",
    "crates/cdf-conformance",
    "crates/cdf-benchmarks",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
