[workspace]
members = [
    "crates/cdf-kernel",
    "crates/cdf-engine",
    "crates/cdf-contract",
    "crates/cdf-expression",
    "crates/cdf-package-contract",
    "crates/cdf-package",
    "crates/cdf-runtime",
    "crates/cdf-task-store",
    "crates/cdf-foreign-stream",
    "crates/cdf-memory",
    "crates/cdf-object-access",
    "crates/cdf-state-sqlite",
    "crates/cdf-http",
    "crates/cdf-aws",
    "crates/cdf-cli-core",
    "crates/cdf-format-parquet",
    "crates/cdf-format-arrow-ipc",
    "crates/cdf-format-avro",
    "crates/cdf-format-protobuf",
    "crates/cdf-format-delimited",
    "crates/cdf-format-json",
    "crates/cdf-transform-gzip",
    "crates/cdf-transform-bzip2",
    "crates/cdf-transform-brotli",
    "crates/cdf-transform-character",
    "crates/cdf-transform-lz4",
    "crates/cdf-transform-zstd",
    "crates/cdf-transform-xz",
    "crates/cdf-transform-snappy",
    "crates/cdf-postgres",
    "crates/cdf-source-postgres",
    "crates/cdf-source-rest",
    "crates/cdf-source-files",
    "crates/cdf-source-iceberg",
    "crates/cdf-source-glue",
    "crates/cdf-transport-http",
    "crates/cdf-declarative",
    "crates/cdf-python",
    "crates/cdf-wasm",
    "crates/cdf-subprocess",
    "crates/cdf-dest-duckdb",
    "crates/cdf-dest-parquet",
    "crates/cdf-dest-postgres",
    "crates/cdf-project",
    "crates/cdf-cli",
    "crates/cdf-conformance",
    "crates/cdf-bench-core",
    "crates/cdf-benchmarks",
    "crates/cdf-bench-measure",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
duckdb = "=1.10504.0"

[patch.crates-io]
# 10x: Arrow-rs 58.3.0 with Thrift 0.23 plus the upstream map-row and CSV-header
# validation features backported. Remove these pins when one supported Arrow release has all three.
arrow-csv = { git = "https://github.com/z3z1ma/arrow-rs.git", rev = "2865fdfc2351303f37f3f8ca5e45fece682ab0b7" }
arrow-row = { git = "https://github.com/z3z1ma/arrow-rs.git", rev = "2865fdfc2351303f37f3f8ca5e45fece682ab0b7" }
parquet = { git = "https://github.com/z3z1ma/arrow-rs.git", rev = "2865fdfc2351303f37f3f8ca5e45fece682ab0b7" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
incremental = false
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.test]
incremental = false
debug = "line-tables-only"

[profile.test.package."*"]
debug = false
