[project]
name = "cdf"
version = "0.7.0"
description = "A framework to manage data continuously"
authors = [
    { name = "z3z1ma", email = "butler.alex2010@gmail.com" },
]
dependencies = [
    "sqlmesh",
    "dlt[duckdb] @ git+https://github.com/dlt-hub/dlt.git@48cdfa1eb7d7b0fb37411d61cc0eb747fba814a7",
    "typer[all]>=0.8.0",
    "harness-featureflags>=1.2.0",
    "python-dotenv>=1.0.0",
    "pex>=2.1.100,<2.2.0",
    "pydantic>=2.5.0,<3.0.0",
    "papermill>=2.5.0",
    "jupyterlab",
    "croniter>1",
    "psutil~=5.9.0",
    "typing-extensions>4,<5",
    "immutabledict~=4.1.0",
    "fsspec>=2022",
    "dynaconf>3,<4",
    "eval_type_backport~=0.1.3; python_version<'3.10'",
]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license.file = "LICENSE"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-mock>=3.12.0",
    "pydoc-markdown>4",
]

[project.scripts]
cdf = "cdf.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
