[project]
name = "python-cdf"
version = "0.9.3"
description = "A framework to manage data continuously"
authors = [
    { name = "z3z1ma", email = "butler.alex2010@gmail.com" },
]
dependencies = [
    # We will find a good version range for these eventually, but allowing them to float
    # and be pinned by the user for now is far more useful.
    "sqlmesh",
    "dlt[duckdb]",
    "duckdb",
    # The following deps have well-defined version ranges
    "mysql-mimic>=2,<3",
    "harness-featureflags>=1.2.0,<1.6.1",
    "python-dotenv>=1,<2",
    "pex>=2.1.100,<2.2.0",
    "pydantic>=2.5.0,<3",
    "psutil~=5.9.0",
    "typing-extensions>=4,<5",
    "fsspec>=2022",
    "dynaconf>=3,<4",
    "eval_type_backport~=0.1.3; python_version<'3.10'",
]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license.file = "LICENSE"

[tool.poetry]
packages = [{ include = "src/cdf" }]

[project.optional-dependencies]
dev = [
    # "poetry @ git+https://github.com/radoering/poetry.git@pep621-support",
    "pytest>=7.4.3",
    "pytest-mock>=3.12.0",
    "pydoc-markdown>4",
]

[build-system]
requires = ["poetry-core@ git+https://github.com/radoering/poetry-core.git@pep621-support"]
build-backend = "poetry.core.masonry.api"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
include = ["src"]
exclude = ["examples/", "docs/"]
ignore = ["src/builtin"]
reportPrivateImportUsage = false
