[package]
name = "cdf-aws"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Injected AWS control-plane protocol primitives for cdf."

[dependencies]
aws-credential-types = { version = "1.3.0", features = ["hardcoded-credentials"] }
aws-sigv4 = { version = "1.5.1", default-features = false, features = ["http1", "sign-http"] }
bytes = "1.11.0"
cdf-http = { path = "../cdf-http" }
cdf-kernel = { path = "../cdf-kernel" }
cdf-memory = { path = "../cdf-memory" }
cdf-runtime = { path = "../cdf-runtime" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
url = "2.5.8"
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
futures-executor = "0.3.32"
