[package]
name = "cdf-bench-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Shared benchmark measurement primitives for CDF."

[dependencies]
cdf-memory = { path = "../cdf-memory" }
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tempfile = "3.27.0"
