[package]
name = "cdf-bench-measure"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Slim measured-command runner for CDF benchmark host workflows."

[[bin]]
name = "cdf-p3-measure"
path = "src/main.rs"

[dependencies]
arrow-array = "58.3.0"
arrow-buffer = "58.3.0"
arrow-schema = "58.3.0"
cdf-bench-core = { path = "../cdf-bench-core" }
cdf-contract = { path = "../cdf-contract" }
cdf-kernel = { path = "../cdf-kernel" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
