[package]
name = "cdf-benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Opt-in local benchmark harness for cdf."

[dependencies]
arrow-array = "59.1.0"
arrow-csv = "59.1.0"
arrow-ipc = { version = "59.1.0", features = ["lz4"] }
arrow-json = "59.1.0"
arrow-schema = "59.1.0"
arrow-select = "59.1.0"
clap = { version = "4.6.1", default-features = false, features = ["std", "help", "usage", "error-context"] }
cdf-contract = { path = "../cdf-contract" }
cdf-declarative = { path = "../cdf-declarative" }
cdf-dest-postgres = { path = "../cdf-dest-postgres" }
cdf-dest-duckdb = { path = "../cdf-dest-duckdb" }
cdf-dest-parquet = { path = "../cdf-dest-parquet" }
cdf-engine = { path = "../cdf-engine" }
cdf-formats = { path = "../cdf-formats" }
cdf-http = { path = "../cdf-http" }
cdf-kernel = { path = "../cdf-kernel" }
cdf-package = { path = "../cdf-package" }
cdf-package-contract = { path = "../cdf-package-contract" }
cdf-project = { path = "../cdf-project" }
cdf-runtime = { path = "../cdf-runtime" }
cdf-memory = { path = "../cdf-memory" }
cdf-state-sqlite = { path = "../cdf-state-sqlite" }
datafusion = { git = "https://github.com/apache/datafusion.git", rev = "7ff7278edc1bf7446303bff51e5883a38414bbdf", default-features = false }
duckdb = { version = "1.10504.0", features = ["bundled"] }
futures-executor = "0.3.32"
futures-util = "0.3.32"
hex = "0.4.3"
parquet = { version = "59.1.0", default-features = false, features = ["arrow"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tempfile = "3.27.0"
tokio = { version = "=1.52.3", features = ["rt-multi-thread"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "baseline"
harness = false
