[package]
name = "cdf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Command-line entry point for cdf."

[[bin]]
name = "cdf"
path = "src/main.rs"

[[bin]]
name = "cdf-generate-cli-artifacts"
path = "src/bin/generate_cli_artifacts.rs"
required-features = ["cli-artifacts"]

[features]
cli-artifacts = ["dep:clap_complete", "dep:clap_mangen"]

[dependencies]
arrow-array = "59.1.0"
cdf-contract = { path = "../cdf-contract" }
cdf-declarative = { path = "../cdf-declarative" }
cdf-dest-duckdb = { path = "../cdf-dest-duckdb" }
cdf-dest-parquet = { path = "../cdf-dest-parquet" }
cdf-dest-postgres = { path = "../cdf-dest-postgres" }
cdf-engine = { path = "../cdf-engine" }
cdf-http = { path = "../cdf-http" }
cdf-kernel = { path = "../cdf-kernel" }
cdf-memory = { path = "../cdf-memory" }
cdf-package = { path = "../cdf-package" }
cdf-project = { path = "../cdf-project" }
cdf-runtime = { path = "../cdf-runtime" }
cdf-source-postgres = { path = "../cdf-source-postgres" }
cdf-python = { path = "../cdf-python" }
cdf-state-sqlite = { path = "../cdf-state-sqlite" }
futures-executor = "0.3.32"
futures-util = "0.3.32"
clap = { version = "4.6.1", default-features = false, features = ["std", "help", "usage", "error-context", "string"] }
clap_complete = { version = "4.6.7", default-features = false, optional = true }
clap_mangen = { version = "0.3.0", default-features = false, optional = true }
rusqlite = { version = "0.40.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10.9"

[dev-dependencies]
arrow-ipc = "59.1.0"
arrow-schema = "59.1.0"
duckdb = { version = "1.10504.0", features = ["bundled"] }
postgres = "0.19"
