[package]
name = "cdf-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Conformance harness boundary for cdf."

[dependencies]
arrow-array = "59.1.0"
arrow-schema = "59.1.0"
cdf-dest-duckdb = { path = "../cdf-dest-duckdb" }
cdf-kernel = { path = "../cdf-kernel" }
cdf-package = { path = "../cdf-package" }
cdf-project = { path = "../cdf-project" }
cdf-state-sqlite = { path = "../cdf-state-sqlite" }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
cdf-cli = { path = "../cdf-cli" }
cdf-contract = { path = "../cdf-contract" }
cdf-declarative = { path = "../cdf-declarative" }
cdf-dest-parquet = { path = "../cdf-dest-parquet" }
cdf-dest-postgres = { path = "../cdf-dest-postgres" }
cdf-engine = { path = "../cdf-engine" }
cdf-formats = { path = "../cdf-formats" }
cdf-http = { path = "../cdf-http" }
cdf-subprocess = { path = "../cdf-subprocess" }
duckdb = { version = "1.10504.0", features = ["bundled"] }
futures-executor = "0.3.32"
postgres = "0.19"
proptest = "1.11.0"
tempfile = "3.27.0"
