[package]
name = "cdf-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Conformance harness boundary for cdf."

[dependencies]
arrow-array = "59.1.0"
arrow-schema = "59.1.0"
cdf-contract = { path = "../cdf-contract" }
cdf-declarative = { path = "../cdf-declarative" }
cdf-dest-duckdb = { path = "../cdf-dest-duckdb" }
cdf-dest-parquet = { path = "../cdf-dest-parquet" }
cdf-dest-postgres = { path = "../cdf-dest-postgres" }
cdf-engine = { path = "../cdf-engine" }
cdf-format-json = { path = "../cdf-format-json" }
cdf-http = { path = "../cdf-http" }
cdf-kernel = { path = "../cdf-kernel" }
cdf-package = { path = "../cdf-package" }
cdf-package-contract = { path = "../cdf-package-contract" }
cdf-project = { path = "../cdf-project" }
cdf-runtime = { path = "../cdf-runtime" }
cdf-source-files = { path = "../cdf-source-files" }
cdf-state-sqlite = { path = "../cdf-state-sqlite" }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
arrow-cast = "59.1.0"
cdf-cli = { path = "../cdf-cli" }
cdf-memory = { path = "../cdf-memory" }
cdf-python = { path = "../cdf-python" }
cdf-subprocess = { path = "../cdf-subprocess" }
duckdb = { version = "1.10504.0", features = ["bundled"] }
futures-executor = "0.3.32"
postgres = "0.19"
proptest = "1.11.0"
tempfile = "3.27.0"
