[package]
name = "cdf-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Schema contract compilation boundary for cdf."

[dependencies]
arrow-schema = "59.1.0"
cdf-kernel = { path = "../cdf-kernel" }
serde = { version = "1.0.228", features = ["derive"] }
unicode-normalization = "0.1.24"

[dev-dependencies]
serde_json = "1.0.150"
