[package]
name = "cdf-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Schema contract compilation boundary for cdf."

[dependencies]
arrow-array = "59.1.0"
arrow-schema = "59.1.0"
cdf-kernel = { path = "../cdf-kernel" }
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
unicode-normalization = "0.1.24"
