[package]
name = "cdf-declarative"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Declarative resource authoring boundary for cdf."

[dependencies]
arrow-array = "59.1.0"
arrow-schema = "59.1.0"
cdf-dest-postgres = { path = "../cdf-dest-postgres" }
cdf-http = { path = "../cdf-http" }
cdf-formats = { path = "../cdf-formats" }
cdf-kernel = { path = "../cdf-kernel" }
futures-util = "0.3.32"
hex = "0.4.3"
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
toml = "1.1.2"

[dev-dependencies]
cdf-conformance = { path = "../cdf-conformance" }
futures-executor = "0.3.32"
