[package]
name = "cdf-dest-duckdb"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "DuckDB destination boundary for cdf."

[dependencies]
arrow-array = { version = "59.1.0", features = ["ffi"] }
arrow-schema = "59.1.0"
duckdb = { version = "=1.10504.0", features = ["appender-arrow", "bundled"] }
cdf-contract = { path = "../cdf-contract" }
cdf-kernel = { path = "../cdf-kernel" }
cdf-package = { path = "../cdf-package" }
cdf-runtime = { path = "../cdf-runtime" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
cdf-conformance = { path = "../cdf-conformance" }
proptest = "1.9.0"
tempfile = "3.27.0"
