[package]
name = "cdf-dest-duckdb"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "DuckDB destination boundary for cdf."

[dependencies]
arrow-array = { version = "58.3.0", features = ["ffi"] }
arrow-ipc = { version = "58.3.0", features = ["lz4"] }
arrow-schema = "58.3.0"
duckdb.workspace = true
cdf-contract = { path = "../cdf-contract" }
cdf-kernel = { path = "../cdf-kernel" }
cdf-package-contract = { path = "../cdf-package-contract" }
cdf-runtime = { path = "../cdf-runtime" }
serde_json = "1.0.150"

[dev-dependencies]
cdf-conformance = { path = "../cdf-conformance" }
cdf-engine = { path = "../cdf-engine" }
cdf-package = { path = "../cdf-package" }
tempfile = "3.27.0"
