[package]
name = "cdf-dest-parquet"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parquet object-store destination boundary for cdf."

[dependencies]
arrow-array = "59.0.0"
arrow-schema = "59.0.0"
cdf-kernel = { path = "../cdf-kernel" }
cdf-package = { path = "../cdf-package" }
hex = "0.4.3"
object_store = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tempfile = "3.27.0"
tokio = { version = "1.48.0", features = ["rt"] }

[dev-dependencies]
cdf-conformance = { path = "../cdf-conformance" }
parquet = { version = "59.0.0", default-features = false, features = ["arrow"] }
