[package]
name = "cdf-dest-parquet"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Parquet object-store destination boundary for cdf."

[dependencies]
arrow-array = "59.1.0"
arrow-schema = "59.1.0"
cdf-contract = { path = "../cdf-contract" }
cdf-kernel = { path = "../cdf-kernel" }
cdf-memory = { path = "../cdf-memory" }
cdf-package = { path = "../cdf-package" }
cdf-package-contract = { path = "../cdf-package-contract" }
cdf-runtime = { path = "../cdf-runtime" }
bytes = "1.11.1"
hex = "0.4.3"
object_store = { git = "https://github.com/apache/arrow-rs-object-store.git", rev = "c7316d29face118e7409eead0cda098f38589428" }
parquet = { version = "59.1.0", default-features = false, features = ["arrow"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tempfile = "3.27.0"
tokio = { version = "=1.52.3", features = ["fs", "io-util"] }

[dev-dependencies]
cdf-conformance = { path = "../cdf-conformance" }
cdf-engine = { path = "../cdf-engine" }
