[package]
name = "cdf-dest-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Postgres destination boundary for cdf."

[dependencies]
arrow-array = "58.3.0"
arrow-schema = "58.3.0"
cdf-contract = { path = "../cdf-contract" }
cdf-http = { path = "../cdf-http" }
cdf-kernel = { path = "../cdf-kernel" }
cdf-memory = { path = "../cdf-memory" }
cdf-package = { path = "../cdf-package" }
cdf-package-contract = { path = "../cdf-package-contract" }
cdf-postgres = { path = "../cdf-postgres" }
cdf-runtime = { path = "../cdf-runtime" }
futures-util = "0.3.32"
hex = "0.4.3"
postgres = "0.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"

[dev-dependencies]
cdf-conformance = { path = "../cdf-conformance" }
tempfile = "3.27.0"
