[package]
name = "cdf-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Planning and execution boundary for cdf."

[dependencies]
arrow-array = "59.1.0"
arrow-arith = "59.1.0"
arrow-ipc = { version = "59.1.0", features = ["lz4"] }
arrow-ord = "59.1.0"
arrow-schema = "59.1.0"
arrow-select = "59.1.0"
datafusion = { git = "https://github.com/apache/datafusion.git", rev = "7ff7278edc1bf7446303bff51e5883a38414bbdf", default-features = false }
cdf-contract = { path = "../cdf-contract" }
cdf-kernel = { path = "../cdf-kernel" }
cdf-memory = { path = "../cdf-memory" }
cdf-package = { path = "../cdf-package" }
cdf-package-contract = { path = "../cdf-package-contract" }
cdf-runtime = { path = "../cdf-runtime" }
futures-executor = "0.3.32"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tracing = "0.1.44"
tokio = { version = "=1.52.3", features = ["rt-multi-thread", "sync"] }

[dev-dependencies]
tempfile = "3.27.0"
