[package]
name = "cdf-expression"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Shared Arrow-native execution for CDF's compiled expression IR."

[dependencies]
arrow-arith = "58.3.0"
arrow-array = "58.3.0"
arrow-ord = "58.3.0"
arrow-schema = "58.3.0"
arrow-select = "58.3.0"
cdf-contract = { path = "../cdf-contract" }
cdf-kernel = { path = "../cdf-kernel" }
