[package]
name = "cdf-format-arrow-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Native Arrow IPC file format driver for cdf."

[dependencies]
arrow-array = "58.3.0"
arrow-buffer = "58.3.0"
arrow-ipc = "58.3.0"
arrow-schema = "58.3.0"
bytes = "1.11.0"
cdf-kernel = { path = "../cdf-kernel" }
cdf-memory = { path = "../cdf-memory" }
cdf-runtime = { path = "../cdf-runtime" }
futures-executor = "0.3.32"
futures-util = "0.3.32"
flatbuffers = "25.12.19"
serde_json = "1.0.150"

[dev-dependencies]
arrow-ipc = "58.3.0"
