[package]
name = "cdf-format-avro"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Native Avro object-container and single-object format drivers for cdf."

[dependencies]
arrow-array = "58.3.0"
arrow-avro = { version = "58.3.0", features = ["async"] }
arrow-schema = "58.3.0"
bytes = "1.11.0"
cdf-kernel = { path = "../cdf-kernel" }
cdf-memory = { path = "../cdf-memory" }
cdf-runtime = { path = "../cdf-runtime" }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
apache-avro = "0.21.0"
arrow-buffer = "58.3.0"
arrow-avro = { version = "58.3.0", features = ["async"] }
futures-executor = "0.3.32"
